@startuml
!theme plain

entity category_product {
    *id
    --
    label
    price
}

entity products {
    *id
    --
    label
    slug
    desc
    price
}

entity item_order {
    *id
    --
    units
}

entity user_order {
    *id
    --
    status
}

entity logs {
    *id
    --
    info
    timestamp
}

entity category_pc {
    *id
    --
    label
    price
}

entity pc {
    *id
    --
    label
    slug
    runtime
    specs
    working_since
}

entity booking {
    *id
    --
    hours
}

entity reports {
    *id
    --
    priority
    desc
}

entity user {
    *id
    --
    name
    surname
    born_date
    username
    password
}

' ---------------------------
'      RELACIONES
' ---------------------------

category_product ||--o| products
products ||--o{ item_order
item_order }o--|| user_order

category_pc ||--o{ pc

pc ||--o{ booking
user ||--o{ booking

pc ||--o{ reports
user ||--o{ reports

user ||--|| user_order

@enduml